[tool.poetry]
name = "tabletoppy"
version = "0.1.0"
description = "A Python library for simulating tabletop games, including dice rolls, coin tosses etc."
authors = ["peaky76 <robertjamespeacock@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/peaky76/tabletoppy"
documentation = "https://tabletoppy.readthedocs.io/"
keywords = ["games", "dice", "cards"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
black = "^23.1.0"
coverage = "^7.1.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
