[tool.poetry]
name = "tabletoppy"
version = "0.2.1"
description = "A Python library for simulating tabletop games, including dice rolls, coin tosses etc."
authors = ["peaky76 <robertjamespeacock@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/peaky76/tabletoppy"
documentation = "https://tabletoppy.readthedocs.io/"
keywords = ["games", "dice", "cards"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
coverage = "^7.1.0"
pytest = ">=7.2.1,<9.0.0"
pytest-mock = "^3.10.0"
pytest-cov = ">=4,<6"
sphinx = ">=6.1.3,<8.0.0"
sphinx-rtd-theme = ">=1.2,<3.0"
mypy = "^1.0.0"
ruff = ">=0.1.5,<0.5.0"

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "FBT", # flake8-boolean-trap
    "C4", # flake8-comprehensions
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff specific

]
ignore = ["E501", "E731", "N806", "PT011"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
